<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:padding="5dp">


    <ImageView
        android:id="@+id/tale_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/image_tale"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/title_tale"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/colorTaleTitle"
        android:textSize="15sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/synopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:justificationMode="inter_word"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/synopsis_tale"
        android:textColor="@color/colorSynopsisTale"
        android:textSize="14sp" />
</LinearLayout>